画像もスプライトとして扱う準備

--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
     </style>
   </head>
   <body>
-    <script src = "./src/orbit_1.js"></script>
+    <script src = "./src/sequence_2.js"></script>
   </body>
 </html>
